test/syntax_not_checked/s0331_verify_preorder_serialization_of_a_binary_tree/hafis/starchat/result.txt
./test/syntax_check/s0331_verify_preorder_serialization_of_a_binary_tree/hafis/starchat/Solution.java:10: error: incomparable types: boolean and int
//@ ensures((\result == 1) || (\result == 0));
                     ^
./test/syntax_check/s0331_verify_preorder_serialization_of_a_binary_tree/hafis/starchat/Solution.java:10: error: incomparable types: boolean and int
//@ ensures((\result == 1) || (\result == 0));
                                       ^
./test/syntax_check/s0331_verify_preorder_serialization_of_a_binary_tree/hafis/starchat/Solution.java:11: error: incomparable types: boolean and int
//@ ensures((preorder.equals("9,3,4,#,#,1,#,#,2,#,6,#,#")) ==> (\result == 1));
                                                                        ^
./test/syntax_check/s0331_verify_preorder_serialization_of_a_binary_tree/hafis/starchat/Solution.java:12: error: incomparable types: boolean and int
//@ ensures((preorder.equals("9,#,#,1")) ==> (\result == 0));
                                                      ^
./test/syntax_check/s0331_verify_preorder_serialization_of_a_binary_tree/hafis/starchat/Solution.java:13: error: incomparable types: boolean and int
//@ ensures((preorder.equals("1,#")) ==> (\result == 0));
                                                  ^
5 errors
